src/tests/errors/lexing/test05.cmp
program main 
begin
    proc x() 
    begin 
       x := 5.  /* illegal float */
    end 
end 